flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-app-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
  selector:
    app: istio-app
