flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: istio-app
spec:
  rules:
  - http:
      paths:
        - backend:
            service:
              name: istio-app-service
              port:
                number: 8000
          path: /
          pathType: Prefix
